[package]
name = "api_tst"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16"
async-std = { version = "1.12", features = ["attributes"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-async-std-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
